fix chromium double scrollbar

--- a/website/sass/style.scss
+++ b/website/sass/style.scss
@@ -5,7 +5,7 @@ $text-color: #fafbf6;
 
 
 html {
-  overflow-y: scroll;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 
